--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,9 +12,12 @@
   <script defer src="scripts/components/gamePlay.js" type="text/javascript"></script>
   <script defer src="scripts/components/ui.js" type="text/javascript"></script>
 
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
+
 </head>
 <body>
-  <div class="wrapper">
+  <div id="wrapper">
     <h1>Hello There!</h1>
   </div>
 </body>
