--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ricochet</title>
   <link rel="stylesheet" type="text/css" title="main stylesheet" href="styles/main.css">
-  <script defer src="scripts/index.js" type="text/javascript"></script>
   <script defer src="scripts/models/vector.js" type="text/javascript"></script>
   <script defer src="scripts/models/ball.js" type="text/javascript"></script>
   <script defer src="scripts/services/api.js" type="text/javascript"></script>
   <script defer src="scripts/components/gamePlay.js" type="text/javascript"></script>
   <script defer src="scripts/components/ui.js" type="text/javascript"></script>
+  <script defer src="scripts/index.js" type="text/javascript"></script>
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
@@ -19,6 +19,9 @@
 <body>
   <div id="wrapper">
     <h1>Hello There!</h1>
+    <canvas id="myCanvas">
+
+    </canvas>
   </div>
 </body>
 </html>
