Initial animation scripts and starting class structure

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,7 +20,7 @@
 <body>
   <div id="wrapper">
     <h1>Hello There!</h1>
-    <canvas id="myCanvas">
+    <canvas id="myCanvas" width="600" height="320">
 
     </canvas>
   </div>
