--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,7 @@
 
   <script defer src="scripts/models/vector.js" type="text/javascript"></script>
   <script defer src="scripts/models/ball.js" type="text/javascript"></script>
+    <script defer src="scripts/models/platform.js" type="text/javascript"></script>
   <script defer src="scripts/services/api.js" type="text/javascript"></script>
   <script defer src="scripts/components/gamePlay.js" type="text/javascript"></script>
   <script defer src="scripts/components/ui.js" type="text/javascript"></script>
