Set temp timeOut & style update

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
   <div id="wrapper">
-    <h1>Hello There!</h1>
+    <h1>Ricochet</h1>
     <canvas id="myCanvas" width="600" height="320">
 
     </canvas>
