matter.js tweaks and implementing svg component

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,7 @@
   <title>Ricochet</title>
   <link rel="stylesheet" type="text/css" title="main stylesheet" href="styles/main.css">
 
+  <script defer src="scripts/libraries/pathseg/pathseg.js" type="text/javascript"></script>
   <script defer src="scripts/models/vector.js" type="text/javascript"></script>
   <script defer src="scripts/models/platform.js" type="text/javascript"></script>
   <script defer src="scripts/services/api.js" type="text/javascript"></script>
