--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,7 @@
   <script defer src="scripts/services/api.js" type="text/javascript"></script>
   <script defer src="scripts/components/ui.js" type="text/javascript"></script>
   <script defer src="scripts/models/ball.js" type="text/javascript"></script>
+  <script defer src="scripts/models/rectangle.js" type="text/javascript"></script>
   <script defer src="scripts/components/gamePlay.js" type="text/javascript"></script>
   <script defer src="scripts/libraries/matter.js" type="text/javascript"></script>
   <script defer src="scripts/index.js" type="text/javascript"></script>
