--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,6 +14,7 @@
   <script defer src="scripts/models/ball.js" type="text/javascript"></script>
   <script defer src="scripts/models/rectangle.js" type="text/javascript"></script>
   <script defer src="scripts/components/gamePlay.js" type="text/javascript"></script>
+  <script defer src="scripts/libraries/decomp.js" type="text/javascript"></script>
   <script defer src="scripts/libraries/matter.js" type="text/javascript"></script>
   <script defer src="scripts/index.js" type="text/javascript"></script>
   <link rel="preconnect" href="https://fonts.gstatic.com">
