--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,9 +25,11 @@
 <body>
   <div id="wrapper">
     <h1>Ricochet</h1>
-    <canvas id="myCanvas" width="800" height="500">
+    <div id="canvasOverlay">
+      <canvas id="myCanvas" width="800" height="500">
 
-    </canvas>
+      </canvas>
+    </div>
   </div>
 </body>
 </html>
