--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,11 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ricochet</title>
   <link rel="stylesheet" type="text/css" title="main stylesheet" href="styles/main.css">
-
-  <script defer src="scripts/libraries/pathseg/pathseg.js" type="text/javascript"></script>
+  <script defer src="scripts/services/api.js" type="text/javascript"></script>
+  <!-- <script defer src="scripts/libraries/pathseg/pathseg.js" type="text/javascript"></script> -->
   <script defer src="scripts/models/vector.js" type="text/javascript"></script>
   <script defer src="scripts/models/platform.js" type="text/javascript"></script>
-  <script defer src="scripts/services/api.js" type="text/javascript"></script>
   <script defer src="scripts/components/ui.js" type="text/javascript"></script>
   <script defer src="scripts/models/ball.js" type="text/javascript"></script>
   <script defer src="scripts/models/rectangle.js" type="text/javascript"></script>
