Addeding elements to levelCompleted.js and tweak to id ... now #canvasWrapper

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,7 +24,7 @@
 <body>
   <div id="wrapper">
     <h1>Ricochet</h1>
-    <div id="canvasOverlay">
+    <div id="canvasWrapper">
       <canvas id="myCanvas" width="800" height="500">
 
       </canvas>
