playAgain btn properly works.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,9 +27,9 @@
   <div id="wrapper">
     <h1>Ricochet</h1>
     <div id="canvasWrapper">
-      <canvas id="myCanvas" width="800" height="500">
+      <!-- <canvas id="myCanvas" width="800" height="500">
 
-      </canvas>
+      </canvas> -->
     </div>
   </div>
 </body>
