--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,6 +18,7 @@
   <script defer src="scripts/services/timer.js" type="text/javascript"></script>
   <script defer src="scripts/components/levelCompleted.js" type="text/javascript"></script>
   <script defer src="scripts/components/showScores.js" type="text/javascript"></script>
+  <script defer src="scripts/components/instructions.js" type="text/javascript"></script>
   <script defer src="scripts/index.js" type="text/javascript"></script>
   <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
